# Customer-Churn-Prediction-and-Analysis_DEPI_3

./: .gitattributes  .gitignore  Dockerfile  Milestone1.ipynb  README.md  docker-compose.yml  mile1.ipynb  pyproject.toml
Notebooks/milestone1&milestone2/: milestoe1&2.ipynb
Notebooks/milestone3/: MileStone3 copy.ipynb  MileStone3.ipynb
milestone1/: milestoe1.ipynb
milestone2/: churn_dashboard.py  milestone2.ipynb  strelmint_dashboard.csv
milestone3/: best_model.pkl  mile3.ipynb  scaler.pkl
models/: Random_Forest.pkl  XGBoost.pkl  encoder.pkl  scaler.pkl
src/api/: server.py
src/ui/: ui.py
